testdata/merge/valid/05_delete_value.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\TestApp]
"KeepThis"="value"
"DeleteThis"=-
