testdata/merge/invalid/err_truncated_hex.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"TruncatedHex"=hex:01,02,03,\
